--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
             <i class="bi bi-bootstrap-fill"></i> Bootstrap
           </p>
           <div class="skills__divider"></div>
-          <p class="skills__title"><i class="bi bi-check-lg"></i> Soft-skills</p>
+          <p class="skills__title">
+            <i class="bi bi-check-lg"></i> Soft-skills
+          </p>
           <p class="skills__label">
             <i class="bi bi-chat-dots"></i> Comunicativo
           </p>
@@ -117,7 +119,41 @@
             <i class="bi bi-check-circle-fill"></i> Interatividade
           </p>
         </div>
-        <div class="col-8 skills__right-column"></div>
+        <div class="col-8 metas right-column">
+          <div class="col-12 p-3 metas__right-column rounded">
+            <p class="metas__title finish">
+              <i class="bi bi-exclamation-diamond-fill"></i> Novas Metas:
+            </p>
+            <p class="metas__label finish">
+              <i class="bi bi-arrow-down-right-circle-fill"></i> Entrar em uma faculdade de Análise de Desenvolvimento de Sistemas
+            </p>
+            <p class="metas__label finish">
+              <i class="bi bi-arrow-down-right-circle-fill"></i> Trabalhar na área de desenvolvimento de sistemas
+            </p>
+            <p class="metas__label finish">
+              <i class="bi bi-arrow-down-right-circle-fill"></i> Terminar o TCC do 3º ETIM DS
+            </p>
+            <div class="skills__divider"></div>
+            <p class="metas__title">
+              <i class="bi bi-check-square-fill"></i> Metas Atingidas:
+            </p>
+            <p class="metas__label checked">
+              <i class="bi bi-check-circle-fill"></i> Criar um portfólio
+            </p>
+            <p class="metas__label checked">
+              <i class="bi bi-check-circle-fill"></i> Aprender Git/GitHub
+            </p>
+            <p class="metas__label checked">
+              <i class="bi bi-check-circle-fill"></i> Passar do 2º ETIM DS
+            </p>
+            <p class="metas__label checked">
+              <i class="bi bi-check-circle-fill"></i> Passar do 1º ETIM DS
+            </p>
+            <p class="metas__label checked">
+              <i class="bi bi-check-circle-fill"></i> Entrar na ETEC Sales Gomes
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
