arrumando o 'novas metas'

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
         <div class="col-8 metas right-column">
           <div class="col-12 p-3 metas__right-column rounded">
-            <p class="metas__title finish">
+            <p class="metas__title">
               <i class="bi bi-exclamation-diamond-fill"></i> Novas Metas:
             </p>
             <p class="metas__label finish">
